--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,13 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-   
+    div
+      table
+        tr
+          th Name
+          th Genre
+          th Owner
+        tr 
+          td wise man's fear
+          td Fantasy 
+          td Joe
