--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    button(class='toggle') this is where I want the toggle to go 
+
+
+
