--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1= title
   p Welcome to #{title}
     div
-      table
+      table(class="table table-hover table-dark")
         tr
           th Name
           th Genre
@@ -13,3 +13,4 @@ block content
           td wise man's fear
           td Fantasy 
           td Joe
+  button add book 
