--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,17 @@
 body {
   padding: 50px;
+  padding-top: 70px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   
+}
+
+.darkmode{
+  background-color: midnightblue;
+  
+}
+
+.darkmode, .darkmode h1, .darkmode p, .darkmode td, .darkmode th, .darkmode label, .darkmode a {
+  color: white;
 }
 
 
