--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,25 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css')
+
+
   body
+    //- Header with Login and Nightmode toggle
+    header(class="d-flex justify-content-between align-items-center p-3 bg-light shadow-sm fixed-top")
+      button(class="btn btn-primary") Login
+
+      //- Toggle switch container
+      div(class="form-check form-switch")
+        input(class="form-check-input" type="checkbox" id="nightModeSwitch")
+        label(class="form-check-label" for="flexSwitchCheckDefault") Nightmode
+
+    //- Page-specific content injected here
     block content
-    button(class='toggle') this is where I want the toggle to go 
+    
+    script(src='/javascripts/darkmode.js')
+
+     
 
 
 
